--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstap.min.css",
               "src/styles.css"
+              
             ],
             "scripts": []
           },
